# rusty_crawler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  failfast.yml  pipeline.yml  release.yml  test.yml
rusty_crawler/: Cargo.toml
rusty_crawler/src/: common.rs  crawler.rs  image_utils.rs  main.rs
rusty_crawler/src/model/: link.rs
src/: crawler.rs  image_utils.rs  main.rs
src/logger/: progress_bar.rs  spinner.rs
src/model/: image.rs  link.rs  link_graph.rs  mod.rs
