[package]
name = "rusty_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
html_parser = "0.7.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"]}
tokio = { version = "1", features = ["full"] }
