[package]
name = "rusty_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.4", features = [ "derive" ] }
env_logger = "0.10.0"
futures = "0.3"
scraper = "0.17.1"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "stream"]}
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tokio-stream = "0.1.14"
